# MS-Data-Science

ENGR_E533_Project-main/: .gitignore  README.md  SGujar_MyProducePal_PyTorch-VGG16-TL_Inferencing.ipynb  UI.ipynb  app.py  dlp-siddhesh.ipynb  install.py  pyproject.toml  requirements.txt
ENGR_E533_Project-main/app_assets/: demo_results.csv  demo_results_with_prices.csv  live_testing.csv  selected-weekly-fruit-movement-and-price.xlsx  test_results.csv
ENGR_E533_Project-main/experiments/: JJones_ClassBalancing.ipynb  JJones_VGG16_RunPretrainedModel.ipynb  SGujar_MyProducePal_PyTorch-Fully_Connected_DNN.ipynb  SGujar_MyProducePal_PyTorch-VGG16-TransferLearning.ipynb
ENGR_E533_Project-main/experiments/class_balancing/baseline_2d_CNN/: test_acc.npy  train_acc.npy  train_loss.npy
ENGR_E533_Project-main/experiments/class_balancing/wrs_classbalanced_2d_CNN/: test_acc.npy  train_acc.npy  train_loss.npy
ENGR_E533_Project-main/experiments/gan_output/: gan_disc-train_acc_fake.npy  gan_disc-train_acc_real.npy  gan_disc-train_loss.npy  gan_gen-train_loss.npy
